# ops-experiments

./: .gitignore  .travis.yml  README.md  config.yml  pom.xml  release.sh  tofiji.sh
JavaCppNative/: make.sh
cuda/: CMakeLists.txt  License.txt  README.md
cuda/YacuDecuWrapper/: CMakeLists.txt  deconv.cu  deconv.h
images/: CElegans-CY3-crop.txt  PSF-Bars-stack-cropped-64.tif  PSF-BeadStack-crop-64.tif  bridge-odd.tif  bridge.tif
matlab/deconvolution/: Donuts.asv  Donuts.m  donuts.md
native/: CMakeLists.txt
native/MKLFFTW/: CMakeLists.txt
native/MKLFFTW/source/: MKLFFTW.cpp  MKLFFTW.h  testRL.cpp
native/MKLFFTW/src/: MKLFFTW.cpp
native/YacuDecu/: CMakeLists.txt  cppbuild.sh
notebooks/: Deconvolve.ipynb  Tests.ipynb
ops-experiments-arrayfire/: arrayfiresetup.md  arrayfiresetup.sh  pom.xml
ops-experiments-arrayfire/native/: CMakeLists.txt  cppbuild.sh
ops-experiments-arrayfire/native/arrayfiredecon/: CMakeLists.txt  arrayfiredecon.cpp  arrayfiredecon.h  cppbuild.sh
ops-experiments-arrayfire/native/helloarrayfire/: CMakeLists.txt  helloarrayfire.cpp
ops-experiments-clij/: README.md  pom.xml
ops-experiments-clij/src/main/java/net/haesleinhuepf/clij/customconvolutionplugin/: Convolve.java  Deconvolve.java  customConvolution.cl
ops-experiments-clij/src/main/macro/: convolveDeconvolve.ijm  convolveDeconvolve3D.ijm  convolveDeconvolveFly.ijm
ops-experiments-clij/src/main/resources/: PSF.tif  plugins.config
ops-experiments-clij/src/test/java/net/haesleinhuepf/clij/customconvolutionplugin/: DeconvolveBarsBenchmark.java  DeconvolveBenchmark.java  DeconvolveBenchmarkGauss.java  DeconvolveBigImage.java
ops-experiments-common/: pom.xml
ops-experiments-cuda/: pom.xml
ops-experiments-cuda/native/: cppbuild.sh
ops-experiments-cuda/native/YacuDecu/: CMakeLists.txt  Makefile  Makefile.windows  README.md  cppbuild.sh
ops-experiments-cuda/native/YacuDecu/src/: Makefile.windows  deconv.cu  deconv.h
ops-experiments-cuda/native/python/source/: CMakeLists.txt
ops-experiments-imglib2cache/: pom.xml
ops-experiments-main/: .project  pom.xml
ops-experiments-main/JavaCppNative/: NativeLibrary.java
ops-experiments-main/native/: cppbuild.sh
ops-experiments-main/native/MKLFFTW/src/: MKLFFTW.h
ops-experiments-main/native/YacuDecu/: Makefile
ops-experiments-main/native/YacuDecu/src/: deconv.cu  deconv.h
ops-experiments-mkl/: mklsetup.sh  pom.xml
ops-experiments-mkl/native/: cppbuild.sh
ops-experiments-mkl/native/MKLFFTW/: cppbuild.sh
ops-experiments-mkl/native/MKLFFTW/src/: MKLFFTW.cpp  MKLFFTW.h
ops-experiments-opencl/: openclsetup.md  openclsetup.sh  pom.xml
ops-experiments-opencl/ijscripts/: CLIJDecon.py
ops-experiments-opencl/native/: CMakeLists.txt  cppbuild.sh
ops-experiments-opencl/native/arrayfiredecon/: CMakeLists.txt  arrayfiredecon.h
ops-experiments-opencl/native/lib/: jniOpenCLWrapper.lib
ops-experiments-opencl/native/opencldeconv/: CLIJFFTAlgorithms.md  CMakeLists.txt  cppbuild.sh  kernels.cl  multiply.cl  opencldeconv.cpp  opencldeconv.h
ops-experiments-opencl/native/opencldeconv_build/: Makefile
ops-experiments-opencl/src/main/jython/: CLIJDecon.py
ops-experiments-opencl/src/resources/native/lib/: libopencldeconv.dylib
ops-experiments-tensorflow/: .gitignore  .project  pom.xml
ops-experiments-tensorflow/src/main/resources/tensorflow/graphs/richardsonlucy-complex-1d/: saved_model.pbtxt
ops-experiments-tensorflow/src/main/resources/tensorflow/graphs/richardsonlucy-complex-2d/: saved_model.pbtxt
ops-experiments-tensorflow/src/main/resources/tensorflow/graphs/richardsonlucy-complex-3d/: saved_model.pbtxt
python/: deconvolution_cuda
python/deconvolution/: ArrayFireSandBox.py  ArrayFireUtility.py  DeconIterations.py  DeconLightSheet.py  DeconSandBox.ipynb  DeconSandBox.py  DeconUtility.py  FFT2DSandBox.py  LightSheetITK.py  NonCirculantRL.ipynb  OpenCLDeconvSandBox.py  OpenCLDeconvUtility.py  OpenCLDeonvSandBox.py  PSFUtility.py  YacuDecuUtility.py
scripts/: DeconBenchMarkTheoreticalPSF.groovy
src/main/java/net/imagej/ops/experiments/: ConvertersUtility.java  CudaUtility.java  Hello.java
src/main/java/net/imagej/ops/experiments/fft/: MKLFFTW.h  (+10 more)
src/test/java/net/imagej/ops/experiments/: ConvertersUtilityTest.java  LaunchImageJ.java
(+113 files in other folders)
